package ucf.assignments;

/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Matthew Neet
 */

import javafx.event.ActionEvent;
import javafx.fxml.FXML;
import javafx.scene.control.Button;

public class confirmDelete {

    @FXML
    private Button yes;

    @FXML
    private Button no;

    @FXML
    void deleteNo(ActionEvent event) {

    }

    @FXML
    void deleteYes(ActionEvent event) {

    }

}
